# adventofcode2019

./: .gitignore
1/: Main.hs
10/: Main.hs
14/: Main.hs  input2.txt  x14.cabal
16/: Main.hs
2/: Main.hs  x2.cabal
20/: Main.hs  x20.cabal
3/: Main.hs  x3.cabal
4/: Main.hs
5/: Main.hs  x5.cabal
6/: Main.hs
8/: Main.hs
