cabal-version:       >=1.10
name:                x14
version:             0.1.0.0
license:             BSD3
author:              Andreas Ekeroot
maintainer:          andeke@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable x14
  main-is:             Main.hs
  other-extensions:    LambdaCase
  build-depends:       base >=4.11 && <4.12,
                       containers,
                       megaparsec,
                       parser-combinators
  default-language:    Haskell2010
