cabal-version:       >=1.10
name:                x3
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Andreas Ekeroot
maintainer:          andeke@gmail.com
build-type:          Simple

executable x3
  main-is:             Main.hs
  build-depends:       base >=4.11 && <4.12,
                       containers >=0.5 && <0.6,
                       megaparsec == 8.0.0,
                       parser-combinators
  default-language:    Haskell2010
