cabal-version:       >=1.10
name:                x5
version:             0.1.0.0
license:             BSD3
author:              Andreas Ekeroot
maintainer:          andeke@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable x3
  main-is:             Main.hs
  -- other-modules:
  other-extensions:    LambdaCase
  build-depends:       base >=4.11 && <4.12, megaparsec, primitive, vector
  -- hs-source-dirs:
  default-language:    Haskell2010
